EXTRA_DIST = \
    tests/dlvhextests.test \
    3col.hex \
    agg1.hex \
    agg2.hex \
    agg3.hex \
    builtin_safety1.hex \
    builtin_safety2.hex \
    empty.hex \
    equality.hex \
    extatom1.hex \
    extatom2.hex \
    extatom3.hex \
    extatom4.hex \
    extatom5.hex \
    extatom6.hex \
    extatom7.hex \
    extatom9.hex \
    minimality.hex \
    msp.hex \
    namespace1.hex \
    namespace2.hex \
    percentparser.hex \
    simple1.hex \
    weak1.hex \
    weak2.hex \
    maxint.hex \
    naftest.hex \
    nonmon_noloop.hex \
    nonmon_inc.hex \
    nonmon_guess.hex \
    notwellfounded1.hex \
    notwellfounded2.hex \
    operators.hex \
    tertop.hex \
    wellfounded1.hex \
    wellfounded2.hex \
    tests/3col.out \
    tests/agg1.out \
    tests/agg2.out \
    tests/agg3.out \
    tests/builtin_safety1.out \
    tests/builtin_safety2.out \
    tests/empty.out \
    tests/equality.out \
    tests/extatom1.out \
    tests/extatom2.out \
    tests/extatom4.out \
    tests/extatom5.out \
    tests/extatom6.out \
    tests/extatom7.out \
    tests/extatom9.out \
    tests/minimality.out \
    tests/msp.out \
    tests/namespace1.out \
    tests/namespace2.out \
    tests/percentparser.out \
    tests/simple1.out \
    tests/weak1.out \
    tests/weak1r.out \
    tests/weak2.out \
    tests/maxint.out \
    tests/naftest.out \
    tests/nonmon_noloop.out \
    tests/nonmon_inc.out \
    tests/nonmon_guess.out \
    tests/notwellfounded1_nofacts.out \
    tests/notwellfounded1_withfacts.out \
    tests/notwellfounded2.out \
    tests/operators.out \
    tests/tertop.out \
    tests/wellfounded1.out \
    tests/wellfounded2.out
